[backend] Fix tests